--- a/src/main/resources/templates/comment-add.html
+++ b/src/main/resources/templates/comment-add.html
@@ -13,18 +13,18 @@
                 <div class="container mt-5">
                     <div class="d-flex justify-content-center row ">
                         <div class="col-md-8">
-                            <h6>Ще се радваме да ни изпратите коментар за изгледаното видео-решение ;)</h6>
+                            <h6>Коментарът написан от Вас ще е видим само от администраторите на сайта! </h6>
                             <div class="d-flex flex-column comment-section ">
                                 <div  class="bg-blur text-light p-2 rounded">
 
                                     <form th:action="@{/video/comment}" method="POST" th:object="${commentServiceModel}">
                                         <select name="videoEntity" id="videoEntity" class="custom-select">
-                                            <option value="" selected>Изберете раздел</option>
-                                            <option th:each="e:${videoEntity}" th:text="${e}" th:value="${e}"  selected>Изберете раздел</option>
+                                            <option value="" selected>Видео-решение</option>
+                                            <option th:each="e:${videoEntity}" th:text="${e}" th:value="${e}"  selected></option>
                                         </select>
 
 
-                                        </div>
+
                                         <div  class="d-flex flex-row align-items-start">
                                             <textarea class="form-control" rows="5" id="textContent" name ="textContent"  ></textarea>
                                         </div>
